--- a/css/desafio.css
+++ b/css/desafio.css
@@ -3,7 +3,6 @@
   background: rgb(204, 226, 247);
   padding-bottom: 10em;
   padding-top: 2em;
-
 }
 
 .info-perfil {
@@ -28,7 +27,7 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.384);
 }
 
-.perfil{
+.perfil {
   margin-left: 4em;
 }
 
@@ -84,6 +83,8 @@
   transition: 0.3s;
   margin-top: 20px;
   margin-bottom: 1.2em;
+  margin-right: 1.2em;
+  text-decoration: none;
 }
 
 .buttons .favoritos:hover {
